--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,7 +32,7 @@ jobs:
         with:
           go-version: ${{ inputs.go-version }}
       - name: Run unit test
-        run: echo "No Tests"
+        run: make test
       # - name: upload coverage report
       #   uses: codecov/codecov-action@v4.3.0
       #   with:
